fixes text overlapping hero title text on navbar

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -10,10 +10,12 @@
 
   .navbar {
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: #000;
     padding: 0;
     height: auto;
     z-index: 1;
+    position: sticky;
+    width: 100%;
   }
 
   .navbar-links {
@@ -54,6 +56,7 @@
   .hero-title {
     margin-top: 5rem;
     font-size: 2.5rem;
+    z-index: -1;
   }
 
   .hero-subtitle {
